--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -35,7 +35,7 @@
 	</script>
 
 </head>
-<body>
+<!-- <body>
 	<a href="rest/demo/test">Test</a>
 	<br />
 	<form id="registerHostId">
@@ -52,6 +52,19 @@
 		</fieldset>
 	</form>
 	<br />
+</body> -->
+<body>
+	<div id="webShop">
+	<h3>Primer WebShop aplikacije u Vue.js tehnologiji</h3>
+	  <router-view></router-view>
+</div>
 </body>
 
+<script src="js/vue.js"></script>
+<script src="js/vue-router.js"></script>
+<script src="js/axios.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/toast.js"></script>
+<script src="app/host.js"></script>
+<script src="app/app.js"></script>
 </html>
