--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -32,7 +32,7 @@
 			
 			
 		}
-	</script>
+</script>
 
 </head>
 <!-- <body>
@@ -54,7 +54,7 @@
 	<br />
 </body> -->
 <body>
-	<div id="webShop">
+	<div id="host">
 	<h3>Primer WebShop aplikacije u Vue.js tehnologiji</h3>
 	  <router-view></router-view>
 	</div>
@@ -66,5 +66,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/toast.js"></script>
 <script src="app/host.js"></script>
+<script src="app/hostAdd.js"></script>
 <script src="app/app.js"></script>
 </html>
