--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -55,7 +55,7 @@
 </body> -->
 <body>
 	<div id="host">
-	<h3>Primer WebShop aplikacije u Vue.js tehnologiji</h3>
+	<h3>Header</h3>
 	  <router-view></router-view>
 	</div>
 </body>
@@ -66,6 +66,8 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/toast.js"></script>
 <script src="app/host.js"></script>
+<script src="app/gest.js"></script>
 <script src="app/hostAdd.js"></script>
+<script src="app/gostAdd.js"></script>
 <script src="app/app.js"></script>
 </html>
