--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" type="text/css">
+    <style>
+      .map {
+        height: 400px;
+        width: 100%;
+      }
+    </style>
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="jquery.min.js"></script>
 <script type="text/javascript">
@@ -35,24 +43,7 @@
 </script>
 
 </head>
-<!-- <body>
-	<a href="rest/demo/test">Test</a>
-	<br />
-	<form id="registerHostId">
-		<fieldset>
-			<legend>Test forme i JSON</legend>
-			<input type="text" name="userName" /><br /> <input type="text"
-				name="password" /><br /> <input type="text" name="name"
-				value="Pera" /> <input type="text" name="surname" value="Peric" /> <input
-				type="text" name="gender" value="Musko" /> <input type="button"
-				value="submit" onclick="registerHost()" /> <br />
-			<fieldset>
-				<div id="result">Rezultat poziva</div>
-			</fieldset>
-		</fieldset>
-	</form>
-	<br />
-</body> -->
+
 <body>
 	<div id="host">
 	<h3>Header</h3>
@@ -65,9 +56,12 @@
 <script src="js/axios.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/toast.js"></script>
+
 <script src="app/host.js"></script>
-<script src="app/gest.js"></script>
+<script src="app/guest.js"></script>
 <script src="app/hostAdd.js"></script>
-<script src="app/gostAdd.js"></script>
+<script src="app/guestAdd.js"></script>
+<script src="app/location.js"></script>
+
 <script src="app/app.js"></script>
 </html>
