--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script src="jquery.min.js"></script>
+<script src="app/map.js"></script>
 <script type="text/javascript">
 		function getFormData($form){
 		    var unindexed_array = $form.serializeArray();
@@ -57,11 +58,14 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/toast.js"></script>
 
+<script src="app/addApartment.js"></script>
+<script src="app/apartment.js"></script>
 <script src="app/host.js"></script>
 <script src="app/guest.js"></script>
 <script src="app/hostAdd.js"></script>
 <script src="app/guestAdd.js"></script>
 <script src="app/location.js"></script>
+
 
 <script src="app/app.js"></script>
 </html>
