--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -65,6 +65,7 @@
 <script src="app/hostAdd.js"></script>
 <script src="app/guestAdd.js"></script>
 <script src="app/location.js"></script>
+<script src="app/picture.js"></script>
 
 
 <script src="app/app.js"></script>
