--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -21,10 +21,16 @@
                 <div class="navbar-collapse collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="admin.html#/registration" v-if="loggedin">Add host</a>
+                        <a class="nav-link" href="admin.html#/hostAdd" >Add host</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" v-on:click.prevent="logout" v-if="loggedin">Logout</a>
+                        <a class="nav-link" href="admin.html#/host" >Hosts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin.html#/guest" >Guest</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" v-on:click.prevent="logout" >Logout</a>
                     </li>
                     </ul>
                 </div>
@@ -42,8 +48,10 @@
         <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
         <script type = "text/javascript" src="js/axios.min.js"></script>
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-		<script type = "text/javascript" src="app/registration.js"></script>
-		<script type = "text/javascript" src="app/admin.js"></script>
+    	<script type = "text/javascript" src="app/hostAdd.js"></script>
+    	<script type = "text/javascript" src="app/host.js"></script>
+   		<script type = "text/javascript" src="app/guest.js"></script>
+		<script type = "text/javascript" src="app/adminHomepage.js"></script>
        
     </body>
 </html>
