--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -39,7 +39,7 @@
         <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
         <script type = "text/javascript" src="js/axios.min.js"></script>
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-		<script type = "text/javascript" src="app/guest.js"></script>
+		<script type = "text/javascript" src="app/guestHomepage.js"></script>
        
     </body>
 </html>
