Ubacena funkcionalonost za dodavanje slika

--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -51,7 +51,7 @@
     	<script type = "text/javascript" src="app/hostAdd.js"></script>
     	<script type = "text/javascript" src="app/host.js"></script>
    		<script type = "text/javascript" src="app/guest.js"></script>
-		<script type = "text/javascript" src="app/adminHomepage.js"></script>
+		<script type = "text/javascript" src="app/admin/adminHomepage.js"></script>
        
     </body>
 </html>
