--- a/WebProject1/static/index.html
+++ b/WebProject1/static/index.html
@@ -71,7 +71,7 @@
 	<script src="js/toast.js"></script>
 	<script src="app/login.js"></script>
 	<script src="app/registration.js"></script>
-	<script src="app/guestAdd.js"></script>
+	<script src="app/guest/guestAdd.js"></script>
 	<script src="app/location.js"></script>
 	<script src="app/picture.js"></script>
 	<script src="app/app.js"></script>
