--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -38,16 +38,16 @@
             <router-view></router-view>
         </div>
         
-        <script type = "text/javascript" src="js/popper.min.js"></script>
-        <script type = "text/javascript" src="js/jquery-3.3.1.min.js"></script>
-        <script type = "text/javascript" src="js/vue.js"></script>
-        <script type = "text/javascript" src="js/vue-router.js"></script>
+        <script src="js/vue.js"></script>
+		<script src="js/vue-router.js"></script>
+		<script src="js/axios.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/toast.js"></script>
         <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
-        <script type = "text/javascript" src="js/axios.min.js"></script>
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-        <script src="app/addApartment.js"></script>
-		<script src="app/apartment.js"></script>
-		<script type = "text/javascript" src="app/hostHomepage.js"></script>
+        <script src="app/host/addApartment.js"></script>
+		<script src="app/host/apartment.js"></script>
+		<script type = "text/javascript" src="app/host/hostHomepage.js"></script>
        
     </body>
 </html>
