Dodat CrudUsers i zavrsena funkcionalnost login logout

--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="#/apartment" >Apartments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" v-on:click.prevent="logout">Logout</a>
+                        <a class="nav-link" href="/logoff">Logout</a>
                     </li>
                     </ul>
                 </div>
