--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -46,6 +46,7 @@
 		<script type = "text/javascript" src="app/guest/guest.js"></script>
 		<script type = "text/javascript" src="app/guest/apartmentGuest.js"></script>
 		<script type = "text/javascript" src="app/guest/guestAdd.js"></script>
+		<script type = "text/javascript" src="app/guest/apartmentDetails.js"></script>
 		<script type = "text/javascript" src="app/guest/guestHomepage.js"></script>
        
     </body>
