--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -6,6 +6,7 @@
         
         <link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/guestAppartment.css">
+		<link rel="stylesheet" href="css/div.css">
         <title>Rent</title>
         
     </head>
@@ -22,6 +23,9 @@
 				      	<li class="nav-item">
 				        	<a class="nav-link" href="#/FALII">My reservation</a>
 				      	</li>
+				      	<li class="nav-item">
+                        	<a class="nav-link" href="/logoff">Logout</a>
+                   		</li>
 				    </ul>
 				    <form class="form-inline my-2 my-lg-0" data-children-count="1">
 				      <input class="form-control mr-sm-2" type="text" placeholder="Search">
