Dodat prikaz registrovanih korisnika i registrovanje novog domaćina kod Aadmina

--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -21,7 +21,10 @@
                 <div class="navbar-collapse collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="admin.html#/hostAdd" >Add host</a>
+                        <a class="nav-link" href="admin.html#/users" >Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin.html#/addHost" >Add host</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admin.html#/host" >Hosts</a>
@@ -42,15 +45,16 @@
         </div>
         
         <script type = "text/javascript" src="js/popper.min.js"></script>
-        <script type = "text/javascript" src="js/jquery-3.3.1.min.js"></script>
         <script type = "text/javascript" src="js/vue.js"></script>
         <script type = "text/javascript" src="js/vue-router.js"></script>
+        <script type = "text/javascript" src="js/axios.js"></script>
+		<script type = "text/javascript" src="js/jquery.min.js"></script>
         <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
-        <script type = "text/javascript" src="js/axios.min.js"></script>
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-    	<script type = "text/javascript" src="app/hostAdd.js"></script>
-    	<script type = "text/javascript" src="app/host.js"></script>
-   		<script type = "text/javascript" src="app/guest.js"></script>
+        <script type = "text/javascript" src="app/admin/admin.js"></script>
+    	<script type = "text/javascript" src="app/admin/addHost.js"></script>
+    	<script type = "text/javascript" src="app/host/host.js"></script>
+   		<script type = "text/javascript" src="app/guest/guest.js"></script>
 		<script type = "text/javascript" src="app/admin/adminHomepage.js"></script>
        
     </body>
