--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -24,6 +24,9 @@
 				        	<a class="nav-link" href="#/FALII">My reservation</a>
 				      	</li>
 				      	<li class="nav-item">
+                        	<a class="nav-link" href="#/viewProfile">Profile</a>
+                   		</li>
+				      	<li class="nav-item">
                         	<a class="nav-link" href="/logoff">Logout</a>
                    		</li>
 				    </ul>
