Dodat kalendar za biranje datuma za izdavanje apartmana

--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
        	<link rel="stylesheet" href="css/bootstrap.min.css">
-		
+       	<link rel="stylesheet" href="js/v-calendar.min.css">
+	
 		<!-- ovo je za dropboxMultiSelection -->
 		<!--  <link rel="stylesheet" href="dropboxJs/style.css">
   		<link rel="stylesheet" href="dropboxJs/prism.css">
@@ -57,6 +58,7 @@
 		<script src="js/toast.js"></script>
         <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
+        <script type = "text/javascript" src="js/v-calendar.min.js"></script>
         <script src="app/host/addApartment.js"></script>
 		<script src="app/host/apartment.js"></script>
 		<script type = "text/javascript" src="app/host/hostHomepage.js"></script>
