Dodata forma za rezervacuje

--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -48,8 +48,8 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/toast.js"></script>
     
+		<script src="js/popper.min.js" ></script>
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-		
 		<script type = "text/javascript" src="app/guest/guest.js"></script>
 		<script type = "text/javascript" src="app/guest/apartmentGuest.js"></script>
 		<script type = "text/javascript" src="app/guest/guestAdd.js"></script>
