--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="admin.html#/guest" >Guest</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" v-on:click.prevent="logout" >Logout</a>
+                        <a class="nav-link" href="/logoff" >Logout</a>
                     </li>
                     </ul>
                 </div>
