Include-ovane skripte

--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -44,6 +44,10 @@
             <router-view></router-view>
         </div>
         
+        
+        <script src="datePickerJs/fr.js"></script>
+        <script src="datePickerJs/vue.js"></script>
+        <script src="datePickerJs/vuejs-datepicker.min.js"></script>
         <script type = "text/javascript" src="js/popper.min.js"></script>
         <script type = "text/javascript" src="js/vue.js"></script>
         <script type = "text/javascript" src="js/vue-router.js"></script>
