--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -45,11 +45,10 @@
             <router-view></router-view>
         </div>
         
-        <!-- <script src="dropboxJs/jquery-3.2.1.min.js" type="text/javascript"></script>
-  		<script src="dropboxJs/chosen.jquery.js" type="text/javascript"></script>
-  		<script src="dropboxJs/prism.js" type="text/javascript" charset="utf-8"></script>
-  		<script src="dropboxJs/init.js" type="text/javascript" charset="utf-8"></script> -->
         
+        <script src="datePickerJs/fr.js"></script>
+        <script src="datePickerJs/vue.js"></script>
+        <script src="datePickerJs/vuejs-datepicker.min.js"></script>
         <script src="js/popper.min.js" ></script>
         <script src="js/vue.js"></script>
 		<script src="js/vue-router.js"></script>
