Urađen prikaz svih apartmana i sadržaja, dodat  crud za amenities

--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -30,7 +30,13 @@
                         <a class="nav-link" href="admin.html#/host" >Hosts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin.html#/guest" >Guest</a>
+                        <a class="nav-link" href="admin.html#/guest" >Guests</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin.html#/apartments" >Apartments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin.html#/amenities" >Amenities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logoff" >Logout</a>
