Uradjen prikaz rezervacija

--- a/WebProject1/static/guest.html
+++ b/WebProject1/static/guest.html
@@ -21,7 +21,7 @@
 		  		<div class="collapse navbar-collapse" id="navbarColor01">
 			    	<ul class="navbar-nav mr-auto">
 				      	<li class="nav-item">
-				        	<a class="nav-link" href="#/FALII">My reservation</a>
+				        	<a class="nav-link" href="#/ReservationGuest">My reservation</a>
 				      	</li>
 				      	<li class="nav-item">
                         	<a class="nav-link" href="#/viewProfile">Profile</a>
@@ -55,10 +55,12 @@
 		
 		<script src="js/popper.min.js" ></script>
 		
+		
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
 		<script type = "text/javascript" src="app/guest/guest.js"></script>
 		<script type = "text/javascript" src="app/guest/apartmentGuest.js"></script>
 		<script type = "text/javascript" src="app/guest/guestAdd.js"></script>
+		<script type = "text/javascript" src="app/guest/myReservation.js"></script>
 		<script type = "text/javascript" src="app/guest/apartmentDetails.js"></script>
 		<script type = "text/javascript" src="app/guest/guestHomepage.js"></script>
 		
