--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#/apartment" >Apartments</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#/HostReservation" >Reservation</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logoff">Logout</a>
                     </li>
@@ -59,6 +62,7 @@
         <script type = "text/javascript" src="js/bootstrap.min.js"></script>
         <script type = "text/javascript" src="js/v-calendar.min.js"></script>
         <script src="app/host/addApartment.js"></script>
+        <script src="app/host/hostReservation.js"></script>
 		<script src="app/host/apartment.js"></script>
 		<script type = "text/javascript" src="app/host/hostHomepage.js"></script>
        
