Urađeno sortiranje apartmana kod guest naloga i  male promjene u izgledu stranica

--- a/WebProject1/static/host.html
+++ b/WebProject1/static/host.html
@@ -28,10 +28,10 @@
                 <div class="navbar-collapse collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#/addApartment" >Add Apartment</a>
+                        <a class="nav-link" href="#/apartment" >Apartments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#/apartment" >Apartments</a>
+                        <a class="nav-link" href="#/addApartment" >Add Apartment</a>
                     </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#/HostReservation" >Reservation</a>
@@ -40,6 +40,10 @@
                         <a class="nav-link" href="/logoff">Logout</a>
                     </li>
                     </ul>
+                    <form class="form-inline my-2 my-lg-0" data-children-count="1">
+				      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+				      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+				    </form>
                 </div>
             </nav>
         </div>
