--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -43,6 +43,10 @@
                         <a class="nav-link" href="/logoff" >Logout</a>
                     </li>
                     </ul>
+                    <form class="form-inline my-2 my-lg-0" data-children-count="1">
+				      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+				      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+				    </form>
                 </div>
             </nav>
         </div>
