--- a/WebProject1/static/admin.html
+++ b/WebProject1/static/admin.html
@@ -34,13 +34,16 @@
                         <a class="nav-link" href="admin.html#/guest" >Guests</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin.html#/deleteApartment" >Apartments</a>
+                        <a class="nav-link" href="admin.html#/deleteApartment" >Apartments table</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admin.html#/amenities" >Amenities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admin.html#/reservationAdmin" >Reservations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin.html#/" >Edit apartment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logoff" >Logout</a>
